# evolution-bot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  UI_UX_REFACTOR_CHECKLIST.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.ts  vitest.config.js  vitest.config.ts
.github/workflows/: build-desktop.yml  ci.yml
.grapuco/: config.json
docs/: APP_FINALIZATION_PLAYBOOK.md  GITHUB_PUBLISH_CHECKLIST.md  UAT_ACCEPTANCE_CHECKLIST.md
e2e/: connection.spec.ts  dry-run.spec.ts  groups.spec.ts  test-utils.ts
scripts/: build-windows-from-mac.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/campaigns/: history-panel.tsx
src/components/composer/: composer-panel.tsx  operations-panel.tsx  quick-content-modal.tsx
src/components/ui/: alert-dialog.tsx  (+10 more)
src/fixtures/: evolution-groups.json
src/hooks/: use-provider.ts  use-screen-flag.ts
src/mocks/: mock-groups.ts
src/pages/: dashboard-page.tsx
src/stores/: use-activity-log-store.ts  use-campaign-store.ts  use-composer-store.ts  use-groups-store.ts  use-settings-store.ts
src/styles/: globals.css
tests/: broadcast-queue-pause.test.ts  composer-template.test.ts  connection-settings.test.ts  evolution-provider.test.ts  group-filtering.test.ts  normalization.test.ts  queue.test.ts  setup.ts  template-renderer.test.ts
(+71 files in other folders)
