[package]
name = "evo-broadcast-control"
version = "2.4.2"
description = "Evo Broadcast Control"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
keyring = "2.3.3"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
tauri-plugin-http = "2.5.8"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
